spelling corrected and link added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<br>
 		<p>Myself Aaru-Swartz. Yeah... that's a strange name.<br>
 		<h3>But why Aaru Swartz?...</h3> To be honest there is nothing much interesting about the name. The initial of my name was "R" which represented my father's name.<br>
-Friends started calling "R" instead of my name . Hence "Aaru" which representes "R". And Swartz...Many of you might know Aaron Swart(The Internet's  Own Boy).<br>
+Friends started calling "R" instead of my name . Hence "Aaru" which representes "R". And Swartz...Many of you might know <a href="http://www.aaronsw.com/" >Aaron Swartz</a>(The Internet's  Own Boy).<br>
 I came to know about him one day. And started reading about him. And was very much attracted by his ideas and thoughts. Hence the name Swartz.</p>
 	</body>
 </html>
